src/Interview/interviewParser.ts
// Generated from ./Interview/interviewParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { interviewParserListener } from "./interviewParserListener";

export class interviewParser extends Parser {
	public static readonly OPDOT = 1;
	public static readonly S = 2;
	public static readonly BitInterview = 3;
	public static readonly BitInterviewinstgrp = 4;
	public static readonly COMMENT = 5;
	public static readonly Image_type = 6;
	public static readonly Audio_type = 7;
	public static readonly Video_type = 8;
	public static readonly OPDOLL = 9;
	public static readonly OPBUL = 10;
	public static readonly OPESC = 11;
	public static readonly OPRANGLES = 12;
	public static readonly OPRANGLEL = 13;
	public static readonly OPDANGLE = 14;
	public static readonly OPU = 15;
	public static readonly OPB = 16;
	public static readonly OPQ = 17;
	public static readonly OPA = 18;
	public static readonly OPP = 19;
	public static readonly OPM = 20;
	public static readonly OPS = 21;
	public static readonly OPR = 22;
	public static readonly OPC = 23;
	public static readonly OPHASH = 24;
	public static readonly CL = 25;
	public static readonly COLON = 26;
	public static readonly AMP = 27;
	public static readonly DBLCOLON = 28;
	public static readonly PLUS = 29;
	public static readonly DotAt = 30;
	public static readonly Greater = 31;
	public static readonly Less = 32;
	public static readonly RightAngle = 33;
	public static readonly RightArrow = 34;
	public static readonly DBLEQ = 35;
	public static readonly OR = 36;
	public static readonly HSPL = 37;
	public static readonly HSPL2 = 38;
	public static readonly SSPL = 39;
	public static readonly SSPL2 = 40;
	public static readonly BULLET = 41;
	public static readonly DCANY = 42;
	public static readonly ArticleText = 43;
	public static readonly NOTCL = 44;
	public static readonly NUMERIC = 45;
	public static readonly STRING = 46;
	public static readonly NL = 47;
	public static readonly SENTENCE = 48;
	public static readonly BARSTRING = 49;
	public static readonly OPAT = 50;
	public static readonly AtProgress = 51;
	public static readonly AtReference = 52;
	public static readonly AtWidth = 53;
	public static readonly AtHeight = 54;
	public static readonly AtProgressPoints = 55;
	public static readonly AtShortanswer = 56;
	public static readonly AtLonganswer = 57;
	public static readonly AtExampleWithStr = 58;
	public static readonly AtExamplecol = 59;
	public static readonly AtExamplecl = 60;
	public static readonly AtPartialAnswerS = 61;
	public static readonly AtPartialAnswer = 62;
	public static readonly AtLabeltrue = 63;
	public static readonly AtLabelfalse = 64;
	public static readonly AtPoints = 65;
	public static readonly AtSrc = 66;
	public static readonly OPATALT = 67;
	public static readonly OPAMARK = 68;
	public static readonly ShowInIndex = 69;
	public static readonly OpAtCaption = 70;
	public static readonly OpAtLicense = 71;
	public static readonly OpAtCopyright = 72;
	public static readonly OpAtSearch = 73;
	public static readonly OpAtIsTracked = 74;
	public static readonly OpAtIsInfoOnly = 75;
	public static readonly AtDate = 76;
	public static readonly Http = 77;
	public static readonly Https = 78;
	public static readonly AmpAudio = 79;
	public static readonly AmpImage = 80;
	public static readonly AmpImageZoom = 81;
	public static readonly AmpImageWAudio = 82;
	public static readonly AmpVideo = 83;
	public static readonly AmpArticle = 84;
	public static readonly AmpDocument = 85;
	public static readonly AmpApp = 86;
	public static readonly AmpWebsite = 87;
	public static readonly AmpStillImageFilm = 88;
	public static readonly AmpPdf = 89;
	public static readonly OpAmpAudio = 90;
	public static readonly OpAmpImage = 91;
	public static readonly OpAmpImageZoom = 92;
	public static readonly OpAmpImageWAudio = 93;
	public static readonly OpAmpVideo = 94;
	public static readonly OpAmpArticle = 95;
	public static readonly OpAmpArticleAtt = 96;
	public static readonly OpAmpDocument = 97;
	public static readonly OpAmpApp = 98;
	public static readonly OpAmpWebsite = 99;
	public static readonly OpAmpStillImageFilm = 100;
	public static readonly BracEnclose = 101;
	public static readonly AmpAudioLink = 102;
	public static readonly AmpImageLink = 103;
	public static readonly AmpVideoLink = 104;
	public static readonly AmpArticleLink = 105;
	public static readonly AmpDocumentLink = 106;
	public static readonly AmpAppLink = 107;
	public static readonly AmpWebsiteLink = 108;
	public static readonly AmpStillImageFilmLink = 109;
	public static readonly OpAmpAudioLink = 110;
	public static readonly OpAmpImageLink = 111;
	public static readonly OpAmpVideoLink = 112;
	public static readonly OpAmpArticleLink = 113;
	public static readonly OpAmpDocumentLink = 114;
	public static readonly OpAmpAppLink = 115;
	public static readonly OpAmpWebsiteLink = 116;
	public static readonly OpAmpStillImageFilmLink = 117;
	public static readonly BitmarkMinus = 118;
	public static readonly BitmarkPlus = 119;
	public static readonly ColonText = 120;
	public static readonly Prosemirror = 121;
	public static readonly Placeholder = 122;
	public static readonly BASIC = 123;
	public static readonly JPG = 124;
	public static readonly PNG = 125;
	public static readonly GIF = 126;
	public static readonly SVG = 127;
	public static readonly MP2 = 128;
	public static readonly MP3 = 129;
	public static readonly MP4 = 130;
	public static readonly FLV = 131;
	public static readonly WMV = 132;
	public static readonly MPEG = 133;
	public static readonly MPG = 134;
	public static readonly TEL = 135;
	public static readonly DotArticleAtt = 136;
	public static readonly STAR = 137;
	public static readonly URL = 138;
	public static readonly LIST_LINE = 139;
	public static readonly ENCLBARS = 140;
	public static readonly RULE_bitmark = 0;
	public static readonly RULE_bitmark_ = 1;
	public static readonly RULE_interviews = 2;
	public static readonly RULE_interview = 3;
	public static readonly RULE_interview_instruction_grouped = 4;
	public static readonly RULE_mcrsep = 5;
	public static readonly RULE_mcrsep_end = 6;
	public static readonly RULE_mcrmisc = 7;
	public static readonly RULE_interview_qanda = 8;
	public static readonly RULE_interview_qanda__ = 9;
	public static readonly RULE_interview_sometext = 10;
	public static readonly RULE_interview_text = 11;
	public static readonly RULE_interview_answer = 12;
	public static readonly RULE_longans = 13;
	public static readonly RULE_shortans = 14;
	public static readonly RULE_partans = 15;
	public static readonly RULE_mark_text = 16;
	public static readonly RULE_query = 17;
	public static readonly RULE_answer = 18;
	public static readonly RULE_heading = 19;
	public static readonly RULE_key_title = 20;
	public static readonly RULE_value_title = 21;
	public static readonly RULE_ml_example = 22;
	public static readonly RULE_bitElem = 23;
	public static readonly RULE_interview_footer = 24;
	public static readonly RULE_footer_resource = 25;
	public static readonly RULE_footer_text = 26;
	public static readonly RULE_gap = 27;
	public static readonly RULE_single_gap = 28;
	public static readonly RULE_atpoint = 29;
	public static readonly RULE_format = 30;
	public static readonly RULE_resource_format = 31;
	public static readonly RULE_resource_format_extra = 32;
	public static readonly RULE_format2 = 33;
	public static readonly RULE_image_format = 34;
	public static readonly RULE_video_format = 35;
	public static readonly RULE_article_format = 36;
	public static readonly RULE_document_format = 37;
	public static readonly RULE_app_format = 38;
	public static readonly RULE_website_format = 39;
	public static readonly RULE_stillimagefilm_format = 40;
	public static readonly RULE_op_article_format = 41;
	public static readonly RULE_op_document_format = 42;
	public static readonly RULE_op_app_format = 43;
	public static readonly RULE_op_website_format = 44;
	public static readonly RULE_op_video_format = 45;
	public static readonly RULE_op_stillimagefilm_format = 46;
	public static readonly RULE_articlebit = 47;
	public static readonly RULE_documentbit = 48;
	public static readonly RULE_websitebit = 49;
	public static readonly RULE_appbit = 50;
	public static readonly RULE_stillimagefilmbit = 51;
	public static readonly RULE_stillimg_one = 52;
	public static readonly RULE_videobit = 53;
	public static readonly RULE_video_one = 54;
	public static readonly RULE_imagebit = 55;
	public static readonly RULE_image_one = 56;
	public static readonly RULE_op_image_format = 57;
	public static readonly RULE_image_chained = 58;
	public static readonly RULE_image_chained4match = 59;
	public static readonly RULE_audiobit = 60;
	public static readonly RULE_audio_one = 61;
	public static readonly RULE_audio_format = 62;
	public static readonly RULE_op_audio_format = 63;
	public static readonly RULE_resource_chained = 64;
	public static readonly RULE_telephone = 65;
	public static readonly RULE_url = 66;
	public static readonly RULE_item = 67;
	public static readonly RULE_lead = 68;
	public static readonly RULE_angleref = 69;
	public static readonly RULE_example = 70;
	public static readonly RULE_bracketed_text = 71;
	public static readonly RULE_reference = 72;
	public static readonly RULE_progress = 73;
	public static readonly RULE_dateprop = 74;
	public static readonly RULE_dateprop_chained = 75;
	public static readonly RULE_instruction = 76;
	public static readonly RULE_hint = 77;
	public static readonly RULE_title = 78;
	public static readonly RULE_bool_label = 79;
	public static readonly RULE_progress_points = 80;
	public static readonly RULE_istracked = 81;
	public static readonly RULE_isinfoonly = 82;
	public static readonly RULE_atdef = 83;
	public static readonly RULE_atdef_ = 84;
	public static readonly RULE_dollarans = 85;
	public static readonly RULE_anchor = 86;
	public static readonly RULE_dcolon = 87;
	public static readonly RULE_lines = 88;
	public static readonly RULE_s_and_w = 89;
	public static readonly RULE_bracket_escaped = 90;
	public static readonly RULE_clnsp = 91;
	public static readonly RULE_sspl = 92;
	public static readonly RULE_words = 93;
	public static readonly RULE_sp = 94;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"bitmark", "bitmark_", "interviews", "interview", "interview_instruction_grouped", 
		"mcrsep", "mcrsep_end", "mcrmisc", "interview_qanda", "interview_qanda__", 
		"interview_sometext", "interview_text", "interview_answer", "longans", 
		"shortans", "partans", "mark_text", "query", "answer", "heading", "key_title", 
		"value_title", "ml_example", "bitElem", "interview_footer", "footer_resource", 
		"footer_text", "gap", "single_gap", "atpoint", "format", "resource_format", 
		"resource_format_extra", "format2", "image_format", "video_format", "article_format", 
		"document_format", "app_format", "website_format", "stillimagefilm_format", 
		"op_article_format", "op_document_format", "op_app_format", "op_website_format", 
		"op_video_format", "op_stillimagefilm_format", "articlebit", "documentbit", 
		"websitebit", "appbit", "stillimagefilmbit", "stillimg_one", "videobit", 
		"video_one", "imagebit", "image_one", "op_image_format", "image_chained", 
		"image_chained4match", "audiobit", "audio_one", "audio_format", "op_audio_format", 
		"resource_chained", "telephone", "url", "item", "lead", "angleref", "example", 
		"bracketed_text", "reference", "progress", "dateprop", "dateprop_chained", 
		"instruction", "hint", "title", "bool_label", "progress_points", "istracked", 
		"isinfoonly", "atdef", "atdef_", "dollarans", "anchor", "dcolon", "lines", 
		"s_and_w", "bracket_escaped", "clnsp", "sspl", "words", "sp",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'[.'", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'[^'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'[#'", "']'", "':'", "'&'", "'::'", 
		"'+'", "'.@'", "'>'", "'<'", "'\u25BA'", "'\u2192'", "'=='", undefined, 
		undefined, undefined, undefined, undefined, "'\u2022'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'[@'", 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "'http://'", "'https://'", 
		"'&audio'", "'&image'", "'&image-zoom'", "'&image-with-audio'", "'&video'", 
		"'&article'", "'&document'", "'&app'", "'&website'", "'&still-image-film'", 
		"'&pdf'", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'&audio-link'", 
		"'&image-link'", "'&video-link'", "'&article-link'", "'&document-link'", 
		"'&app-link'", "'&website-link'", "'&still-image-film-link'", undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"':bitmark--'", "':bitmark++'", "':text'", "':prosemirror'", "':placeholder'", 
		"':basic'", "':jpg'", "':png'", "':gif'", "':svg'", "':mp2'", "':mp3'", 
		"':mp4'", "':flv'", "':wmv'", "':mpeg'", "':mpg'", "'tel:'", "'.article-attachment'", 
		"'*'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "OPDOT", "S", "BitInterview", "BitInterviewinstgrp", "COMMENT", 
		"Image_type", "Audio_type", "Video_type", "OPDOLL", "OPBUL", "OPESC", 
		"OPRANGLES", "OPRANGLEL", "OPDANGLE", "OPU", "OPB", "OPQ", "OPA", "OPP", 
		"OPM", "OPS", "OPR", "OPC", "OPHASH", "CL", "COLON", "AMP", "DBLCOLON", 
		"PLUS", "DotAt", "Greater", "Less", "RightAngle", "RightArrow", "DBLEQ", 
		"OR", "HSPL", "HSPL2", "SSPL", "SSPL2", "BULLET", "DCANY", "ArticleText", 
		"NOTCL", "NUMERIC", "STRING", "NL", "SENTENCE", "BARSTRING", "OPAT", "AtProgress", 
		"AtReference", "AtWidth", "AtHeight", "AtProgressPoints", "AtShortanswer", 
		"AtLonganswer", "AtExampleWithStr", "AtExamplecol", "AtExamplecl", "AtPartialAnswerS", 
		"AtPartialAnswer", "AtLabeltrue", "AtLabelfalse", "AtPoints", "AtSrc", 
		"OPATALT", "OPAMARK", "ShowInIndex", "OpAtCaption", "OpAtLicense", "OpAtCopyright", 
		"OpAtSearch", "OpAtIsTracked", "OpAtIsInfoOnly", "AtDate", "Http", "Https", 
		"AmpAudio", "AmpImage", "AmpImageZoom", "AmpImageWAudio", "AmpVideo", 
		"AmpArticle", "AmpDocument", "AmpApp", "AmpWebsite", "AmpStillImageFilm", 
		"AmpPdf", "OpAmpAudio", "OpAmpImage", "OpAmpImageZoom", "OpAmpImageWAudio", 
		"OpAmpVideo", "OpAmpArticle", "OpAmpArticleAtt", "OpAmpDocument", "OpAmpApp", 
		"OpAmpWebsite", "OpAmpStillImageFilm", "BracEnclose", "AmpAudioLink", 
		"AmpImageLink", "AmpVideoLink", "AmpArticleLink", "AmpDocumentLink", "AmpAppLink", 
		"AmpWebsiteLink", "AmpStillImageFilmLink", "OpAmpAudioLink", "OpAmpImageLink", 
		"OpAmpVideoLink", "OpAmpArticleLink", "OpAmpDocumentLink", "OpAmpAppLink", 
		"OpAmpWebsiteLink", "OpAmpStillImageFilmLink", "BitmarkMinus", "BitmarkPlus", 
		"ColonText", "Prosemirror", "Placeholder", "BASIC", "JPG", "PNG", "GIF", 
		"SVG", "MP2", "MP3", "MP4", "FLV", "WMV", "MPEG", "MPG", "TEL", "DotArticleAtt", 
		"STAR", "URL", "LIST_LINE", "ENCLBARS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(interviewParser._LITERAL_NAMES, interviewParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return interviewParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "interviewParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return interviewParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return interviewParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(interviewParser._ATN, this);
	}
	// @RuleVersion(0)
	public bitmark(): BitmarkContext {
		let _localctx: BitmarkContext = new BitmarkContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, interviewParser.RULE_bitmark);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 190;
				this.bitmark_();
				this.state = 200;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 194;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						while (_la === interviewParser.S) {
							{
							{
							this.state = 191;
							this.match(interviewParser.S);
							}
							}
							this.state = 196;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
						}
						this.state = 197;
						this.match(interviewParser.NL);
						}
						}
					}
					this.state = 202;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
				}
				}
				}
				this.state = 205;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === interviewParser.BitInterview || _la === interviewParser.BitInterviewinstgrp);
			this.state = 210;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === interviewParser.NL) {
				{
				{
				this.state = 207;
				this.match(interviewParser.NL);
				}
				}
				this.state = 212;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 213;
			this.match(interviewParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public bitmark_(): Bitmark_Context {
		let _localctx: Bitmark_Context = new Bitmark_Context(this._ctx, this.state);
		this.enterRule(_localctx, 2, interviewParser.RULE_bitmark_);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 215;
			this.interviews();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interviews(): InterviewsContext {
		let _localctx: InterviewsContext = new InterviewsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, interviewParser.RULE_interviews);
		try {
			this.state = 219;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case interviewParser.BitInterview:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 217;
				this.interview();
				}
				break;
			case interviewParser.BitInterviewinstgrp:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 218;
				this.interview_instruction_grouped();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interview(): InterviewContext {
		let _localctx: InterviewContext = new InterviewContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, interviewParser.RULE_interview);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 221;
			this.match(interviewParser.BitInterview);
			this.state = 222;
			this.format();
			this.state = 223;
			this.match(interviewParser.CL);
			this.state = 227;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 224;
					this.match(interviewParser.NL);
					}
					}
				}
				this.state = 229;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			this.state = 239;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 230;
					this.bitElem();
					this.state = 234;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 231;
							this.match(interviewParser.NL);
							}
							}
						}
						this.state = 236;
						this._errHandler.sync(this);
						_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
					}
					}
					}
				}
				this.state = 241;
				this._errHandler.sync(this);
